# BigBackend

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  VULKAN_MEMORY_TEST.hpp
base/: CMakeLists.txt  biggy.cpp  biggy.h
biggy/data/: dataloader.py  dataset.py
include/: compute.h  compute_manager.h  device.h  device_memory.h  exception.h  init.h  n_cpu_layer.h  storage.h  storage_manager.h  tensor.h  tensor_utils.h  thread_pool.h  types.h  views.h  vulkan.hpp
layers/naive_cpu/: binary_ops.hpp
layers/vulkan_device/: binary_ops.hpp
server/: biggy.proto  server.py
src/: CMakeLists.txt  compute.cpp  compute_manager.cpp  device.cpp  device_memory.cpp  init.cpp  n_cpu_layer.cpp  storage.cpp  storage_manager.cpp  tensor.cpp  thread_pool.cpp  views.cpp
tests/: CMakeLists.txt  implicit_convolution_gemm.py  tensor_test.cpp
